== 0.23.0

* Enhancements
  * Calendar header has been simplified
  * Sticky popups are now cleaner and no longer display the words, 'description', 'project', or 'tags' as these can be deduced by context

== 0.22.6

* Enhancements
  * Mass-assignment attr_accessible and params slicing implemented to leverage Rails 3.2.6 configuration defaults
  * The About page now references the Task Tracker forum and contact information
  * Sticky Changes:
    * Creating a group of stickies from the project page now refreshes and shows the newly created stickies
    * Cleaned up lists of stickies by changing how they expand when clicking on them
  * Template Changes:
    * Frames and Templates now require unique names per project
    * Templates can now be copied
      * Note: Tags and owners aren't copied to new templates
    * Compact editing of templates added
      * Template items can be reordered by dragging stickies
    * Generating a new group from a template now requires the project to be specified to limit the number of templates that are displayed
  * Email Changes:
    * Default application name is now added to the from: field for emails
    * Email subjects no longer include the application name
  * New Registration Changes:
    * Users without projects will now be prompted when they view the calendar to create a project
    * Default new user settings updated to also show completed stickies

* Refactoring
  * Comments no longer use class_name or class_id and now require to be part of a sticky_id
  * Removed unused project position
  * Stickies no longer have a status, or due_at columns
    * Note: due_date includes the due_at time along with timezone information
  * Consistent sorting and display of model counts used across all objects, (projects, stickies, tags, templates, users, etc)

* Bug Fix
  * Creating a tag with the same name as a deleted tag no longer throws the error 'tag name has already been taken' (by LisaM)