@@ -16,6 +16,10 @@
     </div>
 
     <div class="btn-group">
+      <%= link_to 'Reassign Stickies', bulk_project_path(@project), class: 'btn btn-mini' %>
+    </div>
+
+    <div class="btn-group">
       <%= link_to "Tags", tags_path(project_id: @project.id), class: 'btn btn-mini' %>
       <button class="btn dropdown-toggle btn-mini" data-toggle="dropdown">
         <span class="caret"></span>
