@@ -6,6 +6,75 @@ class ProjectsControllerTest < ActionController::TestCase
     @project = projects(:one)
   end
 
+  test "should show bulk reassign" do
+    get :bulk, id: @project
+    assert_not_nil assigns(:project)
+    assert_template 'bulk'
+    assert_response :success
+  end
+
+  test "should not show bulk reassign to viewers of project" do
+    get :bulk, id: projects(:three)
+    assert_nil assigns(:project)
+    assert_redirected_to projects_path
+  end
+
+  test "should reassign incomplete stickies" do
+    assert_difference("Sticky.where(owner_id: #{users(:valid).id}).count", -1 * Sticky.where(project_id: @project.id, owner_id: users(:valid).id, completed: false).count) do
+      assert_difference("Sticky.where(owner_id: #{users(:admin).id}).count", Sticky.where(project_id: @project.id, owner_id: users(:valid).id, completed: false).count) do
+        post :reassign, id: @project, from_user_id: users(:valid).id, to_user_id: users(:admin).id, sticky_status: 'not_completed'
+      end
+    end
+
+    assert_not_nil assigns(:project)
+    assert_redirected_to assigns(:project)
+  end
+
+  test "should reassign complete stickies" do
+    assert_difference("Sticky.where(owner_id: #{users(:valid).id}).count", -1 * Sticky.where(project_id: @project.id, owner_id: users(:valid).id, completed: true).count) do
+      assert_difference("Sticky.where(owner_id: #{users(:admin).id}).count", Sticky.where(project_id: @project.id, owner_id: users(:valid).id, completed: true).count) do
+        post :reassign, id: @project, from_user_id: users(:valid).id, to_user_id: users(:admin).id, sticky_status: 'completed'
+      end
+    end
+
+    assert_not_nil assigns(:project)
+    assert_redirected_to assigns(:project)
+  end
+
+  test "should reassign all stickies" do
+    assert_difference("Sticky.where(owner_id: #{users(:valid).id}).count", -1 * Sticky.where(project_id: @project.id, owner_id: users(:valid).id).count) do
+      assert_difference("Sticky.where(owner_id: #{users(:admin).id}).count", Sticky.where(project_id: @project.id, owner_id: users(:valid).id).count) do
+        post :reassign, id: @project, from_user_id: users(:valid).id, to_user_id: users(:admin).id, sticky_status: 'all'
+      end
+    end
+
+    assert_not_nil assigns(:project)
+    assert_redirected_to assigns(:project)
+  end
+
+  test "should not reassign stickies without specifying users" do
+    assert_difference("Sticky.where(owner_id: #{users(:valid).id}).count", 0) do
+      post :reassign, id: @project, from_user_id: users(:valid).id, to_user_id: nil, sticky_status: 'not_completed'
+    end
+
+    assert_not_nil assigns(:project)
+    assert_equal 'Please select the original owner and new owner of the stickies.', flash[:error]
+
+    assert_template 'bulk'
+    assert_response :success
+  end
+
+  test "should not reassign stickies as project viewers" do
+    assert_difference("Sticky.where(owner_id: #{users(:valid).id}).count", 0) do
+      assert_difference("Sticky.where(owner_id: #{users(:admin).id}).count", 0) do
+        post :reassign, id: projects(:three), from_user_id: users(:valid).id, to_user_id: users(:admin).id, sticky_status: 'not_completed'
+      end
+    end
+
+    assert_nil assigns(:project)
+    assert_redirected_to projects_path
+  end
+
   test "should set project color" do
     post :colorpicker, id: @project.to_param, color: '#aabbcc', format: 'js'
     users(:valid).reload # Needs reload to avoid stale object
